src/objects/crms11__Finance_Schedule__c.object
<CustomObject>
    <description>FlexPricer Finance Schedules provide date-specific amount information to opportunities &amp; quotes based on start/end dates on line items.</description>
    <fields>
        <fullName>crms11__Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>crms11__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__Month__c</fullName>
        <formula>IF( LEN ( 
             TEXT( 
                     YEAR( crms11__Date__c ) 
                 ) 
             ) == 4, 
    RIGHT( 
        TEXT( 
                YEAR( crms11__Date__c ) 
            ), 2) ,
    TEXT( YEAR( crms11__Date__c ) )
    )

+ &apos;/&apos; + 

    IF( LEN ( 
            TEXT( 
                    MONTH( crms11__Date__c ) 
                ) 
            ) == 1, 
    &apos;0&apos; + TEXT( MONTH( crms11__Date__c ) ),
    TEXT( MONTH( crms11__Date__c ) )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crms11__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Finance Schedules</relationshipLabel>
        <relationshipName>Finance_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Finance Schedule</label>
    <listViews>
        <fullName>crms11__All</fullName>
        <columns>NAME</columns>
        <columns>crms11__Opportunity__c</columns>
        <columns>crms11__Date__c</columns>
        <columns>crms11__Month__c</columns>
        <columns>crms11__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FS-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>